# akonadi-git-resource

./: .gitignore  CMakeLists.txt  Messages.sh  README  akonadi_git_resource.kdev4  cheatingutils.cpp  cheatingutils.h  configdialog.cpp  configdialog.h  configdialog.ui  flagdatabase.cpp  flagdatabase.h  gitresource.cpp  gitresource.desktop  gitresource.h  gitresource.kcfg  gitthread.cpp  gitthread.h  settings.kcfgc
cmake/modules/: FindLibgit2.cmake
